@@ -1,3 +1,9 @@
+1998-06-19  Ian Lance Taylor  <ian@cygnus.com>
+
+	* update.c (merge_file): Make sure the time stamp of the file is
+	different from the time stamp we register in the Entries file.
+	(join_file): Likewise.
+
 1998-06-18  Ian Lance Taylor  <ian@cygnus.com>
 
 	* rcscmds.c: Include <stdio.h>.  Include either <stdarg.h> or
